# ddnet-discordbot-ng

./: Cargo.toml  LICENSE
src/: config.rs  lexer.rs  main.rs  util.rs
src/modules/: database.rs  ddnet_bans.rs  mod.rs
