[package]
name = "ddnet-discordbot-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"]}
thiserror = "1.0"
atomic = "0.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
tokio = { version = "1.29", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite", "migrate" ] }
reqwest = { version = "0.11", features = [ "rustls-tls-native-roots" ] }
twilight-http = "0.15"
twilight-gateway = { version = "0.15", features = [ "rustls-native-roots" ]}
twilight-model = "0.15"
twilight-cache-inmemory = "0.15"
twilight-validate = "0.15"
